Added dynamic menu.

--- a/apps/basic/template.html
+++ b/apps/basic/template.html
@@ -1,2 +1,2 @@
 <h2 class="ui dividing header"><i class="<%- icon %> icon"></i><div class="content"><%- title %></div></h2>
-<p><%- description %></p>
+<p>Basic App for testing.</p>
