--- a/core/error/template.html
+++ b/core/error/template.html
@@ -1,2 +1,2 @@
-<h2 class="ui dividing header"><i class="file icon"></i><div class="content">Page “<%- name %>” not found</div></h2>
-<p>The page you are looking for has not been found.</p>
+<h2 class="ui dividing header"><i class="<%- icon %> icon"></i><div class="content"><%- title %></div></h2>
+<p>The page “<%- name %>” has not been found.</p>
