--- a/core/index/template.html
+++ b/core/index/template.html
@@ -1,4 +1,4 @@
-<h1 class="ui dividing header">OpenADMS UI</h1>
+<h1 class="ui dividing header"><i class="<%- icon %> icon"></i><div class="content"><%- title %></div></h1>
 
 <div class="ui message">
     <div class="header">It works!</div>
