--- a/index.html
+++ b/index.html
@@ -22,12 +22,8 @@
                     Apps <i class="dropdown icon"></i>
                     <div class="menu">
                         <div class="item">
-                            <i class="dropdown icon"></i>
-                            All
-                            <div class="menu">
-                                <a class="item" href="#app/basic">Basic</a>
-                                <a class="item" href="#app/confed">Editor</a>
-                            </div>
+                            <i class="dropdown icon"></i> All
+                            <div class="menu" id="appmenu"></div>
                         </div>
                     </div>
                 </div>
@@ -41,7 +37,7 @@
                 <div class="ui horizontal inverted small divided link list">
                     <a class="item" href="#core/about">About</a>
                     <a class="item" href="#core/license">License</a>
-                    <a class="item" href="https://www.github.com/dabamos/openadms-ui/">Source Code</a>
+                    <a class="item" href="https://github.com/dabamos/openadms-ui/">Source Code</a>
                 </div>
             </div>
         </div>
