--- a/apps/confed/template.html
+++ b/apps/confed/template.html
@@ -1,2 +1,2 @@
-<h2 class="ui dividing header"><i class="<%= icon %> icon"></i><div class="content"><%= title %></div></h2>
-<p><%= description %></p>
+<h2 class="ui dividing header"><i class="<%- icon %> icon"></i><div class="content"><%- title %></div></h2>
+<p>The OpenADMS Node configuration editor.</p>
