--- a/core/dashboard/template.html
+++ b/core/dashboard/template.html
@@ -1,3 +1,3 @@
-<h2 class="ui dividing header"><i class="block layout icon"></i><div class="content">Dashboard</div></h2>
+<h2 class="ui dividing header"><i class="<%- icon %> icon"></i><div class="content"><%- title %></div></h2>
 <p>Hello, World!!</p>
 
