Fixed sticky footer.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="ui center aligned container">
                 <div class="ui horizontal inverted small divided link list">
                     <a class="item" href="#core/about">About</a>
-                    <a class="item" href="#core/license">License</a>
+                    <a class="item" href="#core/licence">Licence</a>
                     <a class="item" href="https://github.com/dabamos/openadms-ui/">Source Code</a>
                 </div>
             </div>
