Refactoring. Added loading screen.

--- a/core/about/template.html
+++ b/core/about/template.html
@@ -1,6 +1,4 @@
 <h2 class="ui dividing header"><i class="<%- icon %> icon"></i><div class="content"><%- title %></div></h2>
-<p>
-    <strong>OpenADMS</strong>&nbsp;UI is the web-based front-end for
-    <strong>OpenADMS</strong>&nbsp;Node and
-    <strong>OpenADMS</strong>&nbsp;Server.
-</p>
+<div class="ui segment">
+<p><strong>OpenADMS</strong>&nbsp;UI is the web-based front-end for <strong>OpenADMS</strong>&nbsp;Node and <strong>OpenADMS</strong>&nbsp;Server.</p>
+</div>
