Moved to ECMAScript 2015.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <title>OpenADMS UI</title>
 
-        <link rel="stylesheet" type="text/css" href="assets/css/semantic.css">
+        <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
         <link rel="stylesheet" type="text/css" href="assets/css/openadms-ui.css">
     </head>
 
@@ -41,19 +41,9 @@
             <div class="ui large text loader">Loading app …</div>
         </div>
 
-        <!-- Libraries and frameworks. //-->
-        <script type="text/javascript" src="assets/js/lib/logger.min.js"></script>
-        <script type="text/javascript" src="assets/js/lib/jquery.min.js"></script>
-        <script type="text/javascript" src="assets/js/lib/underscore-min.js"></script>
-        <script type="text/javascript" src="assets/js/lib/backbone-min.js"></script>
-        <script type="text/javascript" src="assets/js/lib/semantic.min.js"></script>
-        <script type="text/javascript" src="assets/js/lib/url-join.js"></script>
-
-        <!-- OpenADMS UI code. //-->
-        <script type="text/javascript" src="assets/js/model.js"></script>
-        <script type="text/javascript" src="assets/js/view.js"></script>
-        <script type="text/javascript" src="assets/js/router.js"></script>
-        <script type="text/javascript" src="assets/js/openadms-ui.js"></script>
+        <script type="text/javascript" src="dist/jquery.min.js"></script>
+        <script type="text/javascript" src="dist/semantic.min.js"></script>
+        <script type="text/javascript" src="dist/bundle.js"></script>
 
     </body>
 
