--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <title>OpenADMS UI</title>
 
-        <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/semantic.min.css">
         <link rel="stylesheet" type="text/css" href="assets/css/openadms-ui.css">
     </head>
 
