--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html>
 
     <head>
+
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
         <title>OpenADMS UI</title>
 
-        <link rel="stylesheet" type="text/css" href="assets/css/semantic.css">
+        <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.css">
         <link rel="stylesheet" type="text/css" href="assets/css/openadms-ui.css">
+
     </head>
 
     <body>
@@ -41,7 +43,7 @@
             <div class="ui large text loader">Loading app …</div>
         </div>
 
-        <script type="text/javascript" src="dist/jquery.min.js"></script>
+        <script type="text/javascript" src="sdist/jquery.min.js"></script>
         <script type="text/javascript" src="dist/semantic.min.js"></script>
         <script type="text/javascript" src="dist/bundle.js"></script>
 
