--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="ui large text loader">Loading app …</div>
         </div>
 
-        <script type="text/javascript" src="sdist/jquery.min.js"></script>
+        <script type="text/javascript" src="dist/jquery.min.js"></script>
         <script type="text/javascript" src="dist/semantic.min.js"></script>
         <script type="text/javascript" src="dist/bundle.js"></script>
 
