--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <body>
 
-        <div class="ui teal inverted fixed menu">
+        <div class="ui gradient inverted fixed menu">
             <div class="ui container">
                 <a href="#core/index" class="header item" style="font-weight: normal;"><strong>OpenADMS</strong>&nbsp;UI</a>
                 <a href="#core/dashboard" class="item">Dashboard</a>
