--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
         <title>OpenADMS UI</title>
 
-        <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.css">
-        <link rel="stylesheet" type="text/css" href="assets/css/openadms-ui.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/semantic.min.css">
 
     </head>
 
@@ -43,9 +42,7 @@
             <div class="ui large text loader">Loading app …</div>
         </div>
 
-        <script type="text/javascript" src="dist/jquery.min.js"></script>
-        <script type="text/javascript" src="dist/semantic.min.js"></script>
-        <script type="text/javascript" src="dist/bundle.js"></script>
+        <script type="text/javascript" src="assets/css/bundle.js"></script>
 
     </body>
 
