--- a/src/apps/basic/template.html
+++ b/src/apps/basic/template.html
@@ -1,2 +1,7 @@
 <h2 class="ui dividing header"><i class="<%- icon %> icon"></i><div class="content"><%- title %></div></h2>
 <p>Basic App for testing.</p>
+
+<ul id="modules"></ul>
+
+
+<div id="view"></div>
