--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="ui large text loader">Loading app …</div>
         </div>
 
-        <script type="text/javascript" src="assets/css/bundle.js"></script>
+        <script type="text/javascript" src="assets/js/bundle.js"></script>
 
     </body>
 
