--- a/src/apps/confed/template.html
+++ b/src/apps/confed/template.html
@@ -1,2 +1,6 @@
 <h2 class="ui dividing header"><i class="<%- icon %> icon"></i><div class="content"><%- title %></div></h2>
 <p>The OpenADMS Node configuration editor.</p>
+
+<ul id="app-list"></ul>
+
+<div id="app-view"></div>
