Added JSON import.

--- a/src/apps/confed/template.html
+++ b/src/apps/confed/template.html
@@ -1,6 +1,14 @@
-<h2 class="ui dividing header"><i class="<%- icon %> icon"></i><div class="content"><%- title %></div></h2>
+<h2 class="ui header">
+    <i class="<%- icon %> icon"></i>
+    <div class="content">
+        <%- title %>
+        <div class="sub header">Create or modify the sensor node configuration</div>
+    </div>
+</h2>
+<div class="ui segment">
 <p>The OpenADMS Node configuration editor.</p>
 
 <ul id="app-list"></ul>
 
 <div id="app-view"></div>
+</div>
