--- a/src/core/about/template.html
+++ b/src/core/about/template.html
@@ -1,4 +1,30 @@
-<h2 class="ui dividing header"><i class="<%- icon %> icon"></i><div class="content"><%- title %></div></h2>
-<div class="ui segment">
-<p><strong>OpenADMS</strong>&nbsp;UI is the web-based front-end for <strong>OpenADMS</strong>&nbsp;Node and <strong>OpenADMS</strong>&nbsp;Server.</p>
+<h2 class="ui header">
+    <i class="<%- icon %> icon"></i>
+    <div class="content">
+        <%- title %>
+        <div class="sub header">OpenADMS UI</div>
+    </div>
+</h2>
+<div class="ui padded segment">
+    <p>OpenADMS UI is the web-based front-end for OpenADMS Node + Server.</p>
+    <table class="ui definition table">
+        <tbody>
+            <tr>
+                <td>Author</td>
+                <td id="author">Philipp Engel</td>
+            </tr>
+            <tr>
+                <td>Version</td>
+                <td id="version">N/A</td>
+            </tr>
+            <tr>
+                <td>Licence</td>
+                <td id="licence">BSD-2-Clause</td>
+            </tr>
+            <tr>
+                <td>Source Code</td>
+                <td id="source"><a href="https://github.com/dabamos/openadms-ui/">https://github.com/dabamos/openadms-ui/</a></td>
+            </tr>
+        </tbody>
+    </table>
 </div>
