--- a/src/core/dashboard/template.html
+++ b/src/core/dashboard/template.html
@@ -1,3 +1,17 @@
-<h2 class="ui dividing header"><i class="<%- icon %> icon"></i><div class="content"><%- title %></div></h2>
-<p>Hello, World!!</p>
-
+<h2 class="ui header">
+    <i class="<%- icon %> icon"></i>
+    <div class="content">
+        <%- title %>
+        <div class="sub header">App overview</div>
+    </div>
+</h2>
+<div class="ui padded segment">
+    <blockquote class="ui">
+        Od Vardara pa do Triglava,<br>
+        od Đerdapa pa do Jadrana,<br>
+        Kao niska sjajnog đerdana,<br>
+        Svetlim suncem obasjana,<br>
+        ponosito sred Balkana,<br>
+        Jugoslavijo, Jugoslavijo!
+    </blockquote>
+</div>
