--- a/src/core/licence/template.html
+++ b/src/core/licence/template.html
@@ -1,7 +1,13 @@
-<h2 class="ui dividing header"><i class="<%- icon %> icon"></i><div class="content"><%- title %></div></h2>
+<h2 class="ui header">
+    <i class="<%- icon %> icon"></i>
+    <div class="content">
+        <%- title %>
+        <div class="sub header">OpenADMS is licenced under BSD-2-Clause</div>
+    </div>
+</h2>
 
-<div class="ui message">
-<p>Copyright &copy; 2017, Hochschule Neubrandenburg – University of Applied Sciences<br>
+<div class="ui padded segment">
+<h4 class="ui header">Copyright &copy; 2018, Hochschule Neubrandenburg – University of Applied Sciences</h4>
 All rights reserved.</p>
 
 <p>Redistribution and use in source and binary forms, with or without
