--- a/src/core/index/template.html
+++ b/src/core/index/template.html
@@ -1,6 +1,12 @@
-<h2 class="ui dividing header"><i class="<%- icon %> icon"></i><div class="content"><%- title %></div></h2>
-<div class="ui message">
-    <div class="header">It works!</div>
+<h2 class="ui header">
+    <i class="<%- icon %> icon"></i>
+    <div class="content">
+        <%- title %>
+        <div class="sub header">Sensor network command &amp; control center</div>
+    </div>
+</h2>
+<div class="ui padded segment">
+    <h4 class="header">It works!</h4>
     <p>This Single-Page Application is up and running.</p>
 </div>
 
