--- a/src/apps/proman/template.html
+++ b/src/apps/proman/template.html
@@ -2,9 +2,12 @@
     <i class="<%- icon %> icon"></i>
     <div class="content">
         <%- title %>
-        <div class="sub header">Manage your projects and sensor nodes</div>
+        <div class="sub header">Manage your OpenADMS Node projects</div>
     </div>
 </h2>
-<div class="ui loading segment" id="appview">
-
+<div class="ui loading padded segment" id="app-view">
+    <ul class="ui bulleted list">
+        <li class="item"><a href="#app/proman/addpro">Add OpenADMS Node Project</a></li>
+        <li class="item"><a href="#app/proman/importer">Import Sensor Node</a></li>
+    </ul>
 </div>
