--- a/src/core/licence/template.html
+++ b/src/core/licence/template.html
@@ -2,10 +2,9 @@
     <i class="<%- icon %> icon"></i>
     <div class="content">
         <%- title %>
-        <div class="sub header">OpenADMS is licenced under BSD-2-Clause</div>
+        <div class="sub header">BSD-2-Clause</div>
     </div>
 </h2>
-
 <div class="ui padded segment">
 <h4 class="ui header">Copyright &copy; 2018, Hochschule Neubrandenburg – University of Applied Sciences</h4>
 All rights reserved.</p>
