--- a/src/apps/proman/apps/importer/template.html
+++ b/src/apps/proman/apps/importer/template.html
@@ -1,12 +1,12 @@
 <h4 class="ui dividing header"><%- title %></h4>
 <p>Please select a valid OpenADMS UI configuration file (JSON) of the sensor node you wish to import.</p>
-<form class="ui form" id="jsonImport">
+<form class="ui form" id="json-import">
     <div class="two fields">
         <div class="field">
             <label>File (JSON)</label>
             <div class="ui action input">
-                <input type="text" name="fileName" placeholder="Upload JSON File" readonly>
-                <input type="file" id="selectFile" style="display: none;">
+                <input type="text" name="file-name" placeholder="Upload JSON File" readonly>
+                <input type="file" id="select-file" style="display: none;">
                 <button class="ui primary button"><i class="upload icon"></i> Import</button>
             </div>
         </div>
