--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
         <title>OpenADMS UI</title>
 
-        <link rel="stylesheet" type="text/css" href="assets/css/semantic.min.css">
+        <link href="assets/css/semantic.min.css" rel="stylesheet" type="text/css">
+        <link href="/assets/images/favicon.png" rel="icon" type="image/png">
 
     </head>
 
