Added project table mock-up.

--- a/src/apps/about/template.html
+++ b/src/apps/about/template.html
@@ -1,12 +1,12 @@
-<h2 class="ui header">
+<h3 class="ui header">
     <i class="<%- icon %> icon"></i>
     <div class="content">
         <%- title %>
         <div class="sub header">OpenADMS UI</div>
     </div>
-</h2>
+</h3>
 <div class="ui padded segment">
-    <p>OpenADMS UI is the web-based front-end for OpenADMS Node + Server.</p>
+    <p>OpenADMS UI is a web-based front-end for OpenADMS Node + Server.</p>
     <table class="ui definition table">
         <tbody>
             <tr>
@@ -22,8 +22,8 @@
                 <td id="licence">BSD-2-Clause</td>
             </tr>
             <tr>
-                <td>Source Code</td>
-                <td id="source"><a href="https://github.com/dabamos/openadms-ui/">https://github.com/dabamos/openadms-ui/</a></td>
+                <td>Project Site</td>
+                <td id="site"><a href="https://www.dabamos.de/">https://www.dabamos.de/</a></td>
             </tr>
         </tbody>
     </table>
