--- a/src/apps/proman/apps/addpro/template.html
+++ b/src/apps/proman/apps/addpro/template.html
@@ -8,7 +8,7 @@
     <div class="required field">
         <label>Project ID</label>
         <div class="ui action input">
-            <input id="project-id" placeholder="Random Project ID" type="text">
+            <input name="project-id" placeholder="Project ID" type="text">
             <a class="ui icon button" data-content="Generate new ID" id="new-id"><i class="refresh icon"></i></a>
         </div>
     </div>
