--- a/src/apps/proman/template.html
+++ b/src/apps/proman/template.html
@@ -1,13 +1,33 @@
-<h2 class="ui header">
+<h3 class="ui header">
     <i class="<%- icon %> icon"></i>
     <div class="content">
         <%- title %>
         <div class="sub header">Manage your OpenADMS Node projects</div>
     </div>
-</h2>
+</h3>
 <div class="ui loading padded segment" id="app-view">
-    <ul class="ui bulleted list">
-        <li class="item"><a href="#app/proman/addpro">Add OpenADMS Node Project</a></li>
-        <li class="item"><a href="#app/proman/importer">Import Sensor Node</a></li>
-    </ul>
+    <table class="ui very basic compact table">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>ID</th>
+                <th>Description</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+        <tfoot class="full-width">
+            <tr>
+                <th colspan="3">
+                    <div class="ui horizontal list">
+                        <a class="item" id="activate" role="button"><i class="checkmark icon"></i>Activate</a>
+                        <a class="item" id="edit" role="button"><i class="write icon"></i>Edit</a>
+                        <a class="item" id="delete" role="button"><i class="remove icon"></i>Delete</a>
+                    </div>
+                    <a href="#app/proman/addpro" class="ui right floated small labeled icon button"><i class="add icon"></i> Add Project</a>
+                </th>
+            </tr>
+        </tfoot>
+    </table>
+    <a href="#app/proman/importer" class="ui small button">Import Sensor Node</a>
 </div>
