--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>OpenADMS UI</title>
 
         <link href="assets/css/semantic.min.css" rel="stylesheet" type="text/css">
-        <link href="/assets/images/favicon.png" rel="icon" type="image/png">
+        <link href="assets/images/favicon.png" rel="icon" type="image/png">
 
     </head>
 
