--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                     Apps <i class="dropdown icon"></i>
                     <div class="menu" id="appmenu"></div>
                 </div>
+                <div class="right menu">
+                    <a href="#app/settings" class="item"><i class="setting icon"></i></a>
+                </div>
             </div>
         </div>
 
