--- a/src/apps/project-manager/apps/add-project/template.html
+++ b/src/apps/project-manager/apps/add-project/template.html
@@ -23,5 +23,5 @@
         <div class="ui success message"></div>
     </div>
     <button class="ui primary button" type="submit">Create</button>
-    <a href="#app/proman" class="ui button">Cancel</a>
+    <a href="#app/project-manager" class="ui button">Cancel</a>
 </form>
