--- a/src/apps/project-manager/apps/import-sensor-node/template.html
+++ b/src/apps/project-manager/apps/import-sensor-node/template.html
@@ -19,6 +19,6 @@
         <textarea id="preview" style="font-family: monospace; height: 15em;" readonly></textarea>
     </div>
     <div class="field">
-        <a href="#app/proman" class="ui button">Cancel</a>
+        <a href="#app/project-manager" class="ui button">Cancel</a>
     </div>
 </form>
