--- a/src/apps/project-manager/template.html
+++ b/src/apps/project-manager/template.html
@@ -14,19 +14,17 @@
                 <th>Description</th>
             </tr>
         </thead>
-        <tbody>
-        </tbody>
+        <tbody></tbody>
         <tfoot class="full-width">
             <tr>
                 <th colspan="3">
-                    <div id="project-action" class="ui horizontal list">
-                    </div>
-                    <a href="#app/proman/addpro" class="ui right floated small labeled icon button"><i class="add icon"></i> Add Project</a>
+                    <div id="project-action" class="ui horizontal list"></div>
+                    <a href="#app/project-manager/add-project" class="ui right floated small labeled icon button"><i class="add icon"></i> Add Project</a>
                 </th>
             </tr>
         </tfoot>
     </table>
-    <a href="#app/proman/importer" class="ui small button">Import Sensor Node</a>
+    <a href="#app/project-manager/import-sensor-node" class="ui small button">Import Sensor Node</a>
 </div>
 
 <div class="ui basic modal">
