Fixed root path issue.

--- a/src/apps/about/template.html
+++ b/src/apps/about/template.html
@@ -1,13 +1,13 @@
-<h3 class="ui header">
+<h3 class="ui dividing header">
     <i class="<%- icon %> icon"></i>
     <div class="content">
         <%- title %>
         <div class="sub header">OpenADMS UI</div>
     </div>
 </h3>
-<div class="ui padded segment">
+<div>
     <p>OpenADMS UI is a web-based front-end for OpenADMS Node + Server.</p>
-    <table class="ui definition table">
+    <table class="ui definition collapsing table">
         <tbody>
             <tr>
                 <td>Author</td>
