--- a/src/apps/project-manager/apps/import-sensor-node/template.html
+++ b/src/apps/project-manager/apps/import-sensor-node/template.html
@@ -1,4 +1,4 @@
-<h4 class="ui dividing header"><%- title %></h4>
+<h4 class="ui header"><%- title %></h4>
 <p>Please select a valid OpenADMS UI configuration file (JSON) of the sensor node you wish to import.</p>
 <form class="ui form" id="json-import">
     <div class="two fields">
