--- a/src/apps/project-manager/template.html
+++ b/src/apps/project-manager/template.html
@@ -1,11 +1,11 @@
-<h3 class="ui header">
+<h3 class="ui dividing header">
     <i class="<%- icon %> icon"></i>
     <div class="content">
         <%- title %>
         <div class="sub header">Manage your OpenADMS projects</div>
     </div>
 </h3>
-<div class="ui loading padded segment" id="app-view">
+<div class="ui loading" id="app-view">
     <table class="ui very basic compact table">
         <thead>
             <tr>
