--- a/src/apps/confed/template.html
+++ b/src/apps/confed/template.html
@@ -1,4 +1,4 @@
-<h3 class="ui header">
+<h3 class="ui dividing header">
     <i class="<%- icon %> icon"></i>
     <div class="content">
         <%- title %>
