--- a/src/apps/error/template.html
+++ b/src/apps/error/template.html
@@ -5,6 +5,6 @@
         <div class="sub header">Page not found</div>
     </div>
 </h3>
-<div class="padded section">
+<div>
 <p>The page “<%- name %>” has not been found.</p>
 </div>
