--- a/src/apps/index/template.html
+++ b/src/apps/index/template.html
@@ -1,11 +1,11 @@
-<h3 class="ui header">
+<h3 class="ui dividing header">
     <i class="<%- icon %> icon"></i>
     <div class="content">
         <%- title %>
         <div class="sub header">Sensor network command &amp; control center</div>
     </div>
 </h3>
-<div class="ui padded segment">
+<div>
     <h4 class="header">It works!</h4>
     <p>This Single-Page Application is up and running.</p>
 </div>
