--- a/src/apps/licence/template.html
+++ b/src/apps/licence/template.html
@@ -1,11 +1,11 @@
-<h3 class="ui header">
+<h3 class="ui dividing header">
     <i class="<%- icon %> icon"></i>
     <div class="content">
         <%- title %>
         <div class="sub header">BSD-2-Clause</div>
     </div>
 </h3>
-<div class="ui padded segment">
+<div>
 <h4 class="ui header">Copyright &copy; 2018, Hochschule Neubrandenburg – University of Applied Sciences</h4>
 All rights reserved.</p>
 
