--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
 
-        <div class="ui main text container" id="main"></div>
+        <div class="ui main container" id="main"></div>
 
         <div class="ui inverted vertical footer segment">
             <div class="ui center aligned container">
@@ -46,7 +46,7 @@
             <div class="ui large text loader">Loading app …</div>
         </div>
 
-        <script type="text/javascript" src="assets/js/bundle.js"></script>
+        <script type="application/javascript" src="assets/js/bundle.js"></script>
 
     </body>
 
