--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <div class="ui gradient inverted fixed menu">
             <div class="ui container">
                 <a href="#app/index" class="header item" style="font-weight: normal;"><strong>OpenADMS</strong>&nbsp;UI</a>
-                <a href="#app/dashboard" class="item">Dashboard</a>
+                <a href="#app/dashboard" class="item">Wizard</a>
                 <div class="ui inverted simple dropdown item">
                     Apps <i class="dropdown icon"></i>
-                    <div class="menu" id="appmenu"></div>
+                    <div class="menu" id="apps-menu"></div>
                 </div>
                 <div class="right menu">
-                    <a href="#app/settings" class="item"><i class="setting icon"></i></a>
+                    <a href="#app/settings" class="item"><i class="setting icon"></i>Settings</a>
                 </div>
             </div>
         </div>
