Added LocalStorage, Backbone forms, and Plotly charts.

--- a/src/apps/about/template.html
+++ b/src/apps/about/template.html
@@ -1,4 +1,4 @@
-<h3 class="ui dividing header">
+<h3 class="ui header">
     <i class="<%- icon %> icon"></i>
     <div class="content">
         <%- title %>
@@ -6,7 +6,7 @@
     </div>
 </h3>
 <div>
-    <p>OpenADMS UI is a web-based front-end for OpenADMS Node + Server.</p>
+    <p>OpenADMS UI is a web-based front-end for OpenADMS Node.</p>
     <table class="ui definition collapsing table">
         <tbody>
             <tr>
