--- a/src/apps/index/template.html
+++ b/src/apps/index/template.html
@@ -1,4 +1,4 @@
-<h3 class="ui dividing header">
+<h3 class="ui header">
     <i class="<%- icon %> icon"></i>
     <div class="content">
         <%- title %>
@@ -6,7 +6,8 @@
     </div>
 </h3>
 <div>
-    <h4 class="header">It works!</h4>
-    <p>This Single-Page Application is up and running.</p>
+    <div class="ui message">
+        <div class="header">It works!</div>
+        <p>This Single-Page Application is up and running.</p>
+    </div>
 </div>
-
