--- a/index.html
+++ b/index.html
@@ -1,53 +1,51 @@
 <!DOCTYPE html>
 <html>
-
     <head>
-
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-
-        <title>OpenADMS UI</title>
-
-        <link href="assets/css/semantic.min.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/vendor/mini-default.min.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/vendor/daterangepicker.min.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/style.css" rel="stylesheet" type="text/css">
         <link href="assets/images/favicon.png" rel="icon" type="image/png">
-
+        <title>OpenADMS UI</title>
     </head>
-
     <body>
+        <header class="inverse">
+            <a href="#module/index" class="logo"><img src="assets/images/logo.svg" alt="OpenADMS" height="*" id="bars" width="*"></a>
+            <a href="#module/index" class="button"><span class="icon-home"></span> Index</a>
+            <a href="#module/profile" class="button"><span class="icon-user"></span> Profile</a>
+            <a href="#module/settings" class="button"><span class="icon-settings"></span> Settings</a>
+        </header>
 
-        <div class="ui gradient inverted fixed menu">
-            <div class="ui container">
-                <a href="#app/index" class="header item" style="font-weight: normal;"><strong>OpenADMS</strong>&nbsp;UI</a>
-                <a href="#app/dashboard" class="item">Wizard</a>
-                <div class="ui inverted simple dropdown item">
-                    Apps <i class="dropdown icon"></i>
-                    <div class="menu" id="apps-menu"></div>
+        <div class="container" id="main">
+            <div class="row">
+                <div class="col-sm-12 col-md-2">
+                    <nav id="menu">
+                    <!-- The navigation menu is displayed here. //-->
+                    </nav>
                 </div>
-                <div class="right menu">
-                    <a href="#app/settings" class="item"><i class="setting icon"></i>Settings</a>
+                <div class="col-sm-12 col-md-10">
+                    <main>
+                        <div class="card fluid">
+                            <div class="section" id="module">
+                                <!-- Module pages are displayed here. //-->
+                                <div id="loader"><div class="spinner"></div></div>
+                            </div>
+                        </div>
+                    </main>
                 </div>
             </div>
         </div>
-
-        <div class="ui main container" id="main"></div>
-
-        <div class="ui inverted vertical footer segment">
-            <div class="ui center aligned container">
-                <div class="ui horizontal inverted small divided link list">
-                    <a class="item" href="#app/about">About</a>
-                    <a class="item" href="https://github.com/dabamos/openadms-ui/">GitHub</a>
-                    <a class="item" href="#app/licence">Licence</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="ui active inverted page dimmer" id="loader">
-            <div class="ui large text loader">Loading app …</div>
-        </div>
-
-        <script type="application/javascript" src="assets/js/bundle.js"></script>
-
+        <footer>
+            <p><small>
+                <a href="https://www.dabamos.de/">OpenADMS UI</a> |
+                Copyright &copy; 2020, <a href="https://www.hs-nb.de/">Hochschule Neubrandenburg – University of Applied Sciences</a> |
+                <a href="#module/licence">Licence</a> |
+                <a href="https://github.com/dabamos/openadms-ui/">GitHub</a>
+            </small></p>
+        </footer>
+        <script type="application/javascript" src="vendor/script.min.js"></script>
+        <script type="application/javascript" src="core/openadms-ui.js"></script>
     </body>
-
 </html>
