Added About and Logs pages.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </head>
     <body>
         <header class="inverse">
-            <a href="#module/index" class="logo"><img src="assets/images/logo.svg" alt="OpenADMS" height="*" id="bars" width="*"></a>
-            <a href="#module/index" class="button"><span class="icon-home"></span> Index</a>
+            <a href="#module/home" class="logo"><img src="assets/images/logo.svg" alt="OpenADMS" height="*" id="bars" width="*"></a>
+            <a href="#module/home" class="button"><span class="icon-home"></span> Home</a>
             <a href="#module/profile" class="button"><span class="icon-user"></span> Profile</a>
             <a href="#module/settings" class="button"><span class="icon-settings"></span> Settings</a>
         </header>
@@ -39,7 +39,7 @@
         </div>
         <footer>
             <p><small>
-                <a href="https://www.dabamos.de/">OpenADMS UI</a> |
+                <a href="#module/about">About</a> |
                 Copyright &copy; 2020, <a href="https://www.hs-nb.de/">Hochschule Neubrandenburg – University of Applied Sciences</a> |
                 <a href="#module/licence">Licence</a> |
                 <a href="https://github.com/dabamos/openadms-ui/">GitHub</a>
