--- a/modules/status/template.html
+++ b/modules/status/template.html
@@ -1,4 +1,4 @@
-<p class="hidden" id="status-profile-invalid"><mark class="inline-block secondary">Profile is incomplete or missing.</mark></p>
+<p class="hidden" id="status-profile-invalid"><mark class="inline-block secondary">Profile is incomplete or missing</mark></p>
 <table class="hoverable">
     <thead>
         <tr>
@@ -13,31 +13,31 @@
         </tr>
         <tr>
             <td data-label="Property">Server URL</td>
-            <td data-label="Value" id="status-server-url">n/a</td>
+            <td data-label="Value" id="status-server-url">N/A</td>
         </tr>
         <tr>
             <td data-label="Property">API URL</td>
-            <td data-label="Value" id="status-api-url">n/a</td>
+            <td data-label="Value" id="status-api-url">N/A</td>
         </tr>
         <tr>
             <td data-label="Property">API User Name</td>
-            <td data-label="Value" id="status-api-user">n/a</td>
+            <td data-label="Value" id="status-api-user">N/A</td>
         </tr>
         <tr>
             <td data-label="Property">Database Name</td>
-            <td data-label="Value" id="status-database-name">n/a</td>
+            <td data-label="Value" id="status-database-name">N/A</td>
         </tr>
         <tr>
             <td data-label="Property">Server Time</td>
-            <td data-label="Value" id="status-server-time">n/a</td>
+            <td data-label="Value" id="status-server-time">N/A</td>
         </tr>
         <tr>
             <td data-label="Property">Server Uptime</td>
-            <td data-label="Value" id="status-server-uptime">n/a</td>
+            <td data-label="Value" id="status-server-uptime">N/A</td>
         </tr>
         <tr>
             <td data-label="Property">Server Version</td>
-            <td data-label="Value" id="status-server-version">n/a</td>
+            <td data-label="Value" id="status-server-version">N/A</td>
         </tr>
     </tbody>
 </table>
