--- a/modules/status/template.html
+++ b/modules/status/template.html
@@ -1,4 +1,5 @@
-<p class="hidden" id="status-profile-invalid"><mark class="inline-block secondary">Profile is incomplete or missing</mark></p>
+<p class="hidden" id="status-profile-invalid"><mark class="inline-block secondary">Profile incomplete or missing</mark></p>
+
 <table class="hoverable">
     <thead>
         <tr>
@@ -41,4 +42,5 @@
         </tr>
     </tbody>
 </table>
+
 <button id="status-refresh">Refresh</button>
