Renamed references from #module to #modules for consistency.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     </head>
     <body>
         <header class="inverse">
-            <a href="#module/home" class="logo"><img src="assets/images/logo.svg" alt="OpenADMS" height="*" id="bars" width="*"></a>
-            <a href="#module/home" class="button"><span class="icon-home"></span> Home</a>
-            <a href="#module/profile" class="button"><span class="icon-user"></span> Profile</a>
-            <a href="#module/settings" class="button"><span class="icon-settings"></span> Settings</a>
+            <a href="#modules/home" class="logo"><img src="assets/images/logo.svg" alt="OpenADMS" height="*" id="bars" width="*"></a>
+            <a href="#modules/home" class="button"><span class="icon-home"></span> Home</a>
+            <a href="#modules/profile" class="button"><span class="icon-user"></span> Profile</a>
+            <a href="#modules/settings" class="button"><span class="icon-settings"></span> Settings</a>
         </header>
 
         <div class="container" id="main">
@@ -30,7 +30,7 @@
                         <div class="card fluid">
                             <div class="section" id="module">
                                 <!-- Module pages are displayed here. //-->
-                                <div id="loader"><div class="spinner"></div></div>
+                                <div id="loader"><div class="spinner"></div><br>Loading OpenADMS UI …</div>
                             </div>
                         </div>
                     </main>
@@ -39,9 +39,9 @@
         </div>
         <footer>
             <p><small>
-                <a href="#module/about">About</a> |
+                <a href="#modules/about">About</a> |
                 Copyright &copy; 2020, <a href="https://www.hs-nb.de/">Hochschule Neubrandenburg – University of Applied Sciences</a> |
-                <a href="#module/licence">Licence</a> |
+                <a href="#modules/licence">Licence</a> |
                 <a href="https://github.com/dabamos/openadms-ui/">GitHub</a>
             </small></p>
         </footer>
