--- a/modules/about/template.html
+++ b/modules/about/template.html
@@ -17,7 +17,7 @@
     </div>
     <div class="row">
         <div class="col-sm-2 dark"><p>Licence</p></div>
-        <div class="col-sm-10"><p><a href="#module/licence">BSD-2-Clause</a></p></div>
+        <div class="col-sm-10"><p><a href="#modules/licence">BSD-2-Clause</a></p></div>
     </div>
     <div class="row">
         <div class="col-sm-2 dark"><p>Author</p></div>
