--- a/modules/home/template.html
+++ b/modules/home/template.html
@@ -1,14 +1,14 @@
 <div class="row">
     <div class="card center">
-        <p><a href="#module/profile"><img src="assets/images/undraw_authentication.svg" alt="Create or Edit Profile" style="height: 150px;"></a></p>
-        <h4><a href="#module/profile">Create or Edit Profile</a></h4>
+        <p><a href="#modules/profile"><img src="assets/images/undraw_authentication.svg" alt="Create or Edit Profile" style="height: 150px;"></a></p>
+        <h4><a href="#modules/profile">Create or Edit Profile</a></h4>
     </div>
     <div class="card center">
-        <p><a href="#module/status"><img src="assets/images/undraw_site_stats.svg" alt="View Server Status" style="height: 150px;"></a></p>
-        <h4><a href="#module/status">View Server Status</a></h4>
+        <p><a href="#modules/status"><img src="assets/images/undraw_site_stats.svg" alt="View Server Status" style="height: 150px;"></a></p>
+        <h4><a href="#modules/status">View Server Status</a></h4>
     </div>
     <div class="card center">
-        <p><a href="#module/settings"><img src="assets/images/undraw_preferences.svg" alt="Customise Settings" style="height: 150px;"></a></p>
-        <h4><a href="#module/settings">Customise Settings</a></h4>
+        <p><a href="#modules/settings"><img src="assets/images/undraw_preferences.svg" alt="Customise Settings" style="height: 150px;"></a></p>
+        <h4><a href="#modules/settings">Customise Settings</a></h4>
     </div>
 </div>
